Add notifications and restaurant locking
